added colors and background color

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,23 @@
     tools:context=".MainActivity">
 
     <com.example.devlibs.view.CustomView
-        app:textSize="12sp"
-        app:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center"
+        android:id="@+id/custom_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:background_color="@color/black"
-        app:text_color="@color/blue"
+        android:gravity="center"
+        android:orientation="vertical"
         android:text="Hello World!"
+        app:background_color="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_weight="1"
+        app:textSize="12sp"
+        app:text_color="@color/blue">
+    </com.example.devlibs.view.CustomView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
