--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         android:textAlignment="center"
         android:text="LOGIN"
         android:textSize="24sp"
+        android:layout_margin="16dp"
         android:textColor="@color/blue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,6 +41,7 @@
         android:id="@+id/username"
         android:textColor="@color/blue"
         android:textColorHint="@color/grey"
+        android:layout_margin="16dp"
         android:hint="Username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,6 +52,7 @@
         android:textColor="@color/blue"
         android:textColorHint="@color/grey"
         android:hint="Password"
+        android:layout_margin="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
