--- a/app/src/main/res/layout/activity_get_user_texts.xml
+++ b/app/src/main/res/layout/activity_get_user_texts.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.GetUserTexts">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
+        android:layout_weight="12"
         android:name="com.example.devlibs.adapter.editTextsFragment"
         android:layout_width="match_parent"
-        android:layout_height="670sp"
+        android:layout_height="0dp"
         android:layout_margin="8dp"
         app:layoutManager="LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@+id/bttn_set_words"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         tools:context=".fragment.InputTextsFragment"
-        tools:layout_editor_absoluteX="0dp"
         tools:listitem="@layout/edittexts_item" />
 
     <Button
         android:id="@+id/bttn_set_words"
+        android:layout_weight="1"
         android:text="Set Words"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_height="0dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
