--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:textColor="@color/blue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/password"/>
+        app:layout_constraintBottom_toTopOf="@id/username"/>
 
     <EditText
         android:id="@+id/username"
@@ -57,6 +57,38 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/button_login"
+        android:text="Login"
+        android:background="@color/blue"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@id/password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toLeftOf="@id/text_or"/>
+
+    <TextView
+        android:id="@+id/text_or"
+        android:text="or"
+        android:textSize="16sp"
+        android:layout_margin="16dp"
+        android:textColor="@color/blue"
+        app:layout_constraintTop_toBottomOf="@id/password"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/button_register"
+        android:text="Register"
+        android:background="@color/blue"
+        android:layout_margin="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/password"
+        app:layout_constraintLeft_toRightOf="@id/text_or"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
