--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,23 +21,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_weight="1"
-        app:textSize="12sp"
-        app:text_color="@color/blue" />
+        app:textSize="8sp"
+        app:text_color="@color/text1"/>
 
     <TextView
-        android:id="@+id/login"
         android:textAlignment="center"
         android:text="LOGIN"
         android:textSize="24sp"
         android:layout_margin="16dp"
-        android:textColor="@color/blue"
+        android:textColor="@color/text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/username"/>
 
     <EditText
+        android:background="@color/text1"
         android:id="@+id/username"
-        android:textColor="@color/blue"
         android:textColorHint="@color/grey"
         android:layout_margin="16dp"
         android:hint="Username"
@@ -46,8 +45,8 @@
         app:layout_constraintBottom_toTopOf="@id/password"/>
 
     <EditText
+        android:background="@color/text1"
         android:id="@+id/password"
-        android:textColor="@color/blue"
         android:textColorHint="@color/grey"
         android:hint="Password"
         android:layout_margin="16dp"
@@ -59,9 +58,8 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
-        android:id="@+id/button_login"
+        android:id="@+id/login"
         android:text="Login"
-        android:background="@color/blue"
         android:layout_margin="16dp"
         app:layout_constraintTop_toBottomOf="@id/password"
         android:layout_width="wrap_content"
@@ -73,7 +71,7 @@
         android:text="or"
         android:textSize="16sp"
         android:layout_margin="16dp"
-        android:textColor="@color/blue"
+        android:textColor="@color/text1"
         app:layout_constraintTop_toBottomOf="@id/password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +81,6 @@
     <Button
         android:id="@+id/button_register"
         android:text="Register"
-        android:background="@color/blue"
         android:layout_margin="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
