--- a/app/src/main/res/layout/activity_saved.xml
+++ b/app/src/main/res/layout/activity_saved.xml
@@ -8,10 +8,10 @@
     tools:context=".ui.LastPageActivity">
 
     <TextView
-        android:id="@+id/title_text"
+        android:id="@+id/title_text2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/this_is_your_story"
+        android:text="@string/used_words"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,7 +21,7 @@
 
 
     <TextView
-        android:id="@+id/story_text"
+        android:id="@+id/saved_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/sampletextsampletextsampletext"
@@ -33,23 +33,12 @@
         app:layout_constraintVertical_bias="0.505"
         tools:layout_editor_absoluteX="-6dp" />
 
-    <Button
-        android:id="@+id/button_tryagain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/try_again"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toEndOf="@+id/button_save"
-        app:layout_constraintTop_toBottomOf="@+id/title_text"
-        app:layout_constraintVertical_bias="0.963" />
 
     <Button
-        android:id="@+id/button_save"
+        android:id="@+id/button_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SAVE YOUR WORDS"
+        android:text="BACK"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.219"
