--- a/app/src/main/res/layout/activity_saved.xml
+++ b/app/src/main/res/layout/activity_saved.xml
@@ -4,14 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_margin="16dp"
+    android:padding="16dp"
+    android:background="@color/black"
     android:layout_height="match_parent"
     tools:context=".ui.LastPageActivity">
 
     <TextView
         android:id="@+id/title_text2"
+        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/used_words"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,11 +29,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/sampletextsampletextsampletext"
+        android:textColor="@color/blue"
         android:textSize="20dp"
         android:textStyle="italic"
-        android:textColor="@color/blue"
-        app:layout_constraintBottom_toTopOf="@+id/button_tryagain"
-        app:layout_constraintTop_toBottomOf="@+id/title_text"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/button_back"
+        app:layout_constraintTop_toBottomOf="@+id/title_text2"
         app:layout_constraintVertical_bias="0.505"
         tools:layout_editor_absoluteX="-6dp" />
 
@@ -38,13 +43,14 @@
         android:id="@+id/button_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="BACK"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.219"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/story_text"
-        app:layout_constraintVertical_bias="0.926" />
+        app:layout_constraintTop_toBottomOf="@+id/title_text2"
+        app:layout_constraintVertical_bias="0.893" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
