--- a/app/src/main/res/layout/activity_last_page.xml
+++ b/app/src/main/res/layout/activity_last_page.xml
@@ -23,6 +23,21 @@
         tools:layout_editor_absoluteX="42dp" />
 
 
+    <ImageView
+        android:id="@+id/button_share"
+        android:layout_width="90dp"
+
+        android:layout_height="69dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/share_512"
+        android:text="@string/try_again"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.985"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title_text"
+        app:layout_constraintVertical_bias="0.042" />
+
     <TextView
         android:id="@+id/story_text"
         android:textAlignment="center"
@@ -54,13 +69,14 @@
         android:id="@+id/button_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:text="SAVE YOUR WORDS"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.386"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_tryagain"
-        app:layout_constraintVertical_bias="0.238" />
+        app:layout_constraintVertical_bias="0.346" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
