--- a/app/src/main/res/layout/activity_last_page.xml
+++ b/app/src/main/res/layout/activity_last_page.xml
@@ -8,20 +8,20 @@
     android:layout_height="match_parent"
     tools:context=".ui.LastPageActivity">
 
+
     <TextView
         android:id="@+id/title_text"
-        android:textAlignment="center"
-        android:textColor="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/this_is_your_story"
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.002"
-        tools:layout_editor_absoluteX="42dp" />
-
+        app:layout_constraintVertical_bias="0.052" />
 
     <ImageView
         android:id="@+id/button_share"
@@ -38,19 +38,31 @@
         app:layout_constraintTop_toBottomOf="@+id/title_text"
         app:layout_constraintVertical_bias="0.042" />
 
-    <TextView
-        android:id="@+id/story_text"
-        android:textAlignment="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/sampletextsampletextsampletext"
-        android:textSize="20dp"
-        android:textStyle="italic"
-        android:textColor="@color/blue"
-        app:layout_constraintBottom_toTopOf="@+id/button_tryagain"
-        app:layout_constraintTop_toBottomOf="@+id/title_text"
-        app:layout_constraintVertical_bias="0.505"
-        tools:layout_editor_absoluteX="-6dp" />
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="378dp"
+        android:layout_height="275dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.342">
+
+        <TextView
+            android:id="@+id/story_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/sampletextsampletextsampletext"
+            android:textAlignment="center"
+            android:textColor="@color/blue"
+            android:textSize="20dp"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toTopOf="@+id/button_tryagain"
+            app:layout_constraintTop_toBottomOf="@+id/title_text"
+            app:layout_constraintVertical_bias="0.505"
+            tools:layout_editor_absoluteX="-6dp" />
+    </ScrollView>
 
     <ImageView
         android:id="@+id/button_tryagain"
@@ -61,9 +73,10 @@
         android:text="@string/try_again"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_text"
-        app:layout_constraintVertical_bias="0.765" />
+        app:layout_constraintVertical_bias="0.848" />
 
     <Button
         android:id="@+id/button_save"
@@ -76,7 +89,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_tryagain"
-        app:layout_constraintVertical_bias="0.346" />
+        app:layout_constraintVertical_bias="0.259" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
