--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,5 +87,13 @@
         app:layout_constraintTop_toBottomOf="@id/password"
         app:layout_constraintLeft_toRightOf="@id/text_or"/>
 
+    <ImageView
+        android:id="@+id/animated_image"
+        android:layout_width="50dp"
+        android:layout_height="65dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_or" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
