GetUserTexts activity properly displays three different category names. Each editText field saves to a separate variable.

--- a/app/src/main/res/layout/edittexts_item.xml
+++ b/app/src/main/res/layout/edittexts_item.xml
@@ -10,6 +10,7 @@
 
     <com.example.devlibs.view.UserInputFields
         android:id="@+id/word_set"
+        app:category_type="Noun"
         android:layout_margin="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
