--- a/app/src/main/res/layout/activity_saved.xml
+++ b/app/src/main/res/layout/activity_saved.xml
@@ -7,7 +7,7 @@
     android:padding="24dp"
     android:background="@color/black"
     android:layout_height="match_parent"
-    tools:context=".ui.LastPageActivity">
+    tools:context=".ui.SavedActivity">
 
     <TextView
         android:id="@+id/title_text2"
@@ -33,25 +33,14 @@
         android:textColor="@color/blue"
         android:textSize="20dp"
         android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/button_back"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_text2"
         app:layout_constraintVertical_bias="0.188" />
 
-    <Button
-        android:id="@+id/button_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="BACK"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_text2"
-        app:layout_constraintVertical_bias="0.893" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
