--- a/app/src/main/res/layout/activity_saved.xml
+++ b/app/src/main/res/layout/activity_saved.xml
@@ -14,7 +14,7 @@
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/used_words"
+        android:text="YOUR STORIES"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -23,24 +23,31 @@
         app:layout_constraintVertical_bias="0.002"
         tools:layout_editor_absoluteX="42dp" />
 
-
-    <TextView
-        android:id="@+id/saved_text"
-        android:layout_width="310dp"
-        android:layout_height="201dp"
-        android:text="@string/sampletextsampletextsampletext"
-        android:textAlignment="center"
-        android:textColor="@color/blue"
-        android:textSize="20dp"
-        android:textStyle="italic"
+    <ScrollView
+        android:layout_width="336dp"
+        android:layout_height="521dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_text2"
-        app:layout_constraintVertical_bias="0.188" />
+        app:layout_constraintTop_toBottomOf="@+id/title_text2">
 
+        <TextView
+            android:id="@+id/saved_text"
+            android:layout_width="310dp"
+            android:layout_height="201dp"
+            android:text="@string/sampletextsampletextsampletext"
+            android:textAlignment="center"
+            android:textColor="@color/blue"
+            android:textSize="20dp"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title_text2"
+            app:layout_constraintVertical_bias="0.188" />
 
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
