--- a/app/src/main/res/layout/activity_saved.xml
+++ b/app/src/main/res/layout/activity_saved.xml
@@ -26,26 +26,27 @@
     <ScrollView
         android:layout_width="336dp"
         android:layout_height="521dp"
+        android:id="@+id/scroll_layout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_text2">
 
-        <TextView
-            android:id="@+id/saved_text"
-            android:layout_width="310dp"
-            android:layout_height="201dp"
-            android:text="@string/sampletextsampletextsampletext"
-            android:textAlignment="center"
-            android:textColor="@color/blue"
-            android:textSize="20dp"
-            android:textStyle="italic"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title_text2"
-            app:layout_constraintVertical_bias="0.188" />
+        <!--   <TextView
+             android:id="@+id/saved_text"
+              android:layout_width="310dp"
+              android:layout_height="201dp"
+              android:text="@string/sampletextsampletextsampletext"
+              android:textAlignment="center"
+              android:textColor="@color/blue"
+              android:textSize="20dp"
+              android:textStyle="italic"
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintHorizontal_bias="0.495"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/title_text2"
+              app:layout_constraintVertical_bias="0.188" /> -->
 
     </ScrollView>
 
