--- a/app/src/main/res/layout/activity_last_page.xml
+++ b/app/src/main/res/layout/activity_last_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
    android:padding="24dp"
-    android:background="@color/black"
+    android:background="@drawable/coding"
     android:layout_height="match_parent"
     tools:context=".ui.LastPageActivity">
 
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:text="@string/this_is_your_story"
         android:textAlignment="center"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/blue"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
@@ -26,7 +26,7 @@
     <ImageView
         android:id="@+id/button_share"
         android:layout_width="90dp"
-
+android:backgroundTint="@color/fontcolor/font"
         android:layout_height="69dp"
         android:adjustViewBounds="true"
         android:src="@drawable/share_512"
@@ -55,9 +55,10 @@
             android:layout_height="wrap_content"
             android:text="@string/sampletextsampletextsampletext"
             android:textAlignment="center"
-            android:textColor="@color/blue"
+            android:textColor="@color/font"
+
             android:textSize="20dp"
-            android:textStyle="italic"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/button_tryagain"
             app:layout_constraintTop_toBottomOf="@+id/title_text"
             app:layout_constraintVertical_bias="0.505"
